--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,34 @@
 /* some fonts */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
 
-/* header style */
+/* ----------------
+    common styles 
+-------------------*/
+button {
+  font-size: 16px;
+  height: 44px;
+  font-weight: bold;
+  color: #ffffff;
+  background-color: #e02c6d;
+}
+/* -----------------
+    header style 
+--------------------*/
 .navigation-bar h1 {
   font-family: "Poppins", sans-serif;
   font-size: 24px;
   font-weight: 700;
+}
+
+/* cover page style */
+.cover-page-info {
+  font-family: "Poppins", sans-serif;
+}
+.cover-page-info h1 {
+  font-size: 52px;
+  font-weight: 700;
+}
+.cover-page-info p {
+  font-size: 16px;
+  font-weight: 600;
 }
