--- a/styles/style.css
+++ b/styles/style.css
@@ -8,8 +8,14 @@ button {
   font-size: 16px;
   height: 44px;
   font-weight: bold;
-  color: #ffffff;
   background-color: #e02c6d;
+  border: 0;
+}
+button a {
+  text-decoration: none;
+  width: 24px;
+  height: 24px;
+  color: #ffffff;
 }
 /* -----------------
     header style 
@@ -47,6 +53,7 @@ button {
   width: 196px;
   height: 44px;
 }
+
 .cover-pic img {
   width: 440px;
   height: 414px;
