--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@
 /* ----------------
     common styles 
 -------------------*/
+
 button {
   font-size: 16px;
   height: 44px;
@@ -53,8 +54,28 @@ button a {
   width: 196px;
   height: 44px;
 }
-
 .cover-pic img {
   width: 440px;
   height: 414px;
+}
+/* ----------------------------
+    populler collection style
+------------------------------- */
+.product-card {
+  width: 329px;
+  height: 476px;
+  box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+  background-color: #ffffff;
+}
+.product-pic img {
+  width: 300px;
+  height: 256px;
+}
+.product-info .product-name {
+  font-family: "Poppins", sans-serif;
+  font-size: 28px;
+  font-weight: 500;
+}
+.ratting .fa-star {
+  color: #fb8200;
 }
