--- a/styles/style.css
+++ b/styles/style.css
@@ -67,7 +67,7 @@ button a {
   margin-left: 196px;
   margin-right: 196px;
 }
-.popular-collection h3 {
+.popular-collection .section-title {
   display: flex;
   justify-content: center;
   font-weight: 600;
@@ -100,10 +100,21 @@ button a {
   width: 300px;
   height: 256px;
 }
+.product-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+}
 .product-info .product-name {
   font-family: "Poppins", sans-serif;
   font-size: 28px;
   font-weight: 500;
+}
+.price-tag {
+  font-size: 24px;
+}
+.ratting {
+  font-size: 14px;
 }
 .ratting .fa-star {
   color: #fb8200;
