--- a/styles/style.css
+++ b/styles/style.css
@@ -89,9 +89,10 @@ button a {
   grid-row-gap: 30px;
 }
 .product-card {
+  display: grid;
+  justify-content: space-around;
   width: 329px;
   height: 476px;
-
   border-radius: 5px;
   box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
   background-color: #ffffff;
@@ -100,6 +101,7 @@ button a {
   border-radius: 5px;
   width: 300px;
   height: 256px;
+  margin-top: 17px;
 }
 .product-info {
   display: flex;
@@ -110,12 +112,14 @@ button a {
   font-family: "Poppins", sans-serif;
   font-size: 28px;
   font-weight: 500;
+  margin-top: 12px;
   margin-bottom: 8px;
 }
 .product-info p {
   font-family: "Inter", sans-serif;
   font-size: 14px;
   font-weight: 700;
+  margin-top: 8px;
 }
 .price-tag {
   font-size: 24px;
