--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,6 @@ body {
   font-size: 16px;
   height: 44px;
   font-weight: bold;
-  color: #e02c6d;
 }
 
 /* -----------------
@@ -58,13 +57,13 @@ body {
   width: 196px;
   height: 44px;
   border: 0;
+  background-color: #e02c6d;
 }
 .preebook-button a {
   text-decoration: none;
   width: 24px;
   height: 24px;
   color: #ffffff;
-  background-color: #e02c6d;
 }
 /* ----------------------------
     popular collection style
@@ -87,9 +86,9 @@ body {
 .product-list {
   display: grid;
   grid-template-columns: repeat(3, 329px);
-  justify-content: center;
-  grid-column-gap: 30px;
-  grid-row-gap: 30px;
+  justify-content: space-evenly;
+  grid-row-gap: 3%;
+  margin-bottom: 10%;
 }
 .product-card {
   display: grid;
@@ -149,30 +148,7 @@ body {
   margin-top: 3px;
   padding-left: 15px;
 }
-.club {
-  height: 165px;
-  background-color: #51e1ed;
-}
-.club {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.club h4 {
-  font-family: "Poppins", sans-serif;
-  color: white;
-  font-size: 30px;
-  font-weight: 600;
-  margin-right: 50px;
-}
-.signup-button {
-  font-family: "IBM Plex Mono", monospace;
 
-  outline: none;
-  border-radius: 50px;
-  font-weight: 700;
-  background-color: white;
-}
 /* support style */
 
 .support-area {
