--- a/styles/hover.css
+++ b/styles/hover.css
@@ -1,6 +1,12 @@
+.cover-pic {
+  transition: transform 2.2s;
+}
+.cover-pic:hover {
+  transform: scale(1.6);
+}
 .product-pic {
-  transition: transform 0.5s;
+  transition: transform 0.9s;
 }
 .product-pic:hover {
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
