--- a/styles/style.css
+++ b/styles/style.css
@@ -9,12 +9,12 @@
 body {
   margin: 0;
 }
-.pink-color {
+/* .pink-color {
   font-family: "Poppins", sans-serif;
   font-size: 16px;
   height: 44px;
   font-weight: bold;
-}
+} */
 
 /* -----------------
     header style 
@@ -53,6 +53,9 @@ body {
   height: 414px;
 }
 .preebook-button {
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  font-weight: bold;
   border-radius: 41px;
   width: 196px;
   height: 44px;
@@ -61,8 +64,7 @@ body {
 }
 .preebook-button a {
   text-decoration: none;
-  width: 24px;
-  height: 24px;
+
   color: #ffffff;
 }
 /* ----------------------------
