--- a/styles/style.css
+++ b/styles/style.css
@@ -34,6 +34,7 @@ body {
   margin-left: 120px;
   margin-right: 165px;
 }
+
 .cover-page-info {
   font-family: "Poppins", sans-serif;
   width: 582px;
@@ -51,6 +52,10 @@ body {
 .cover-pic img {
   width: 440px;
   height: 414px;
+  transition: transform 2.2s;
+}
+.cover-pic img:hover {
+  transform: scale(1.6);
 }
 .preebook-button {
   font-family: "Poppins", sans-serif;
@@ -106,6 +111,10 @@ body {
   width: 300px;
   height: 256px;
   margin-top: 17px;
+  transition: transform 0.9s;
+}
+.product-pic img:hover {
+  transform: scale(1.1);
 }
 .product-info {
   display: flex;
