--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,5 +1,5 @@
 /* for mobile */
-@media only screen and (max-width: 1307px) {
+@media only screen and (max-width: 1454px) {
   .cover-page-info h1{
     font-size: 32px;
   }
@@ -7,7 +7,42 @@
     width: 400px;
     height: 375;
   }
+  .product-list{
+    grid-template-columns: repeat(3, 229px);
+    grid-column-gap: 150px;
+  }
 }
+@media only screen and (max-width: 1199px){
+  .cover-page-info h1{
+    font-size: 20px;
+  }
+  .cover-pic img{
+    width: 300px;
+    height: 275px;
+  }
+  .product-list{
+    grid-template-columns: repeat(3, 200px);
+    grid-column-gap: 150px;
+  }
+}
+@media (max-width: 970px) {
+  .navigation-bar h3, .cover-page, .popular-collection{
+    margin-left: 100px;
+  }
+  .cover-page-info h1{
+    font-size: 15px;
+  }
+  .cover-pic img{
+    width: 220px;
+    height: 194px;
+  }
+  .product-list{
+    grid-template-columns: repeat(2, 250px);
+    grid-column-gap: 150px;
+  }
+  
+}
+
 
   /* body {
     margin: 8px;
