--- a/styles/style.css
+++ b/styles/style.css
@@ -18,20 +18,23 @@ body {
   font-size: 24px;
   font-weight: 700;
   margin-top: 87px;
-  margin-left: 120px;
+  margin-left: 150px;
 }
 
 /* cover page style */
 .cover-page {
   display: flex;
-  justify-content: space-between;
-  margin-left: 120px;
+  justify-content: flex-start;
+  align-items: center;
+  margin-left: 150px;
   margin-right: 165px;
 }
 
 .cover-page-info {
   font-family: "Poppins", sans-serif;
+  text-align: justify;
   width: 582px;
+  padding-right: 140px;
 }
 .cover-page-info h1 {
   font-size: 52px;
@@ -39,8 +42,8 @@ body {
   color: #3a3a3a;
 }
 .cover-page-info p {
+  font-family: "Poppins", sans-serif;
   font-size: 16px;
-  font-weight: 600;
 }
 
 .cover-pic img {
@@ -63,7 +66,6 @@ body {
 }
 .preebook-button a {
   text-decoration: none;
-
   color: #ffffff;
 }
 /* ----------------------------
